adding new title

--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
   <div id="page">
     <div class="block one">
       <div class="container">
-        <div class="moving left"></div>
-        <h2>Picture</h2>
-        <div class="moving right"></div>
+        <h2>Here comes the scroll</h2>
       </div>
     </div>
-    <div class="block two">
 
+    <div class="block two">
       <div class="container">
         <div class="animation-container">
           <div class="animate moving left">
